Fixing bugs from changes in anchor or as identified by sonarcloud or dependency analysis